--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gamer Zone</title>
     <link rel="shortcut icon" href="Assets/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-query.css">
     <script src="https://kit.fontawesome.com/04f0a79f59.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -68,18 +69,34 @@
         <div class="vid-block">
             <div class="vid-block-info">
                 <img src="Assets/Rectangle 4.png" alt="" class="vid-img">
+                <div class="vid-overlay">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                </div>
                 <p class="vid-text">No Download. No Installs. Play games Instantly on Gamer.</p>
             </div>
             <div class="vid-block-info">
                 <img src="Assets/Rectangle 5.png" alt="" class="vid-img">
+                <div class="vid-overlay">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                </div>
                 <p class="vid-text">Did you score? #unblockedgames #school</p>
             </div>
             <div class="vid-block-info">
-                <img src="Assets/Rectangle 6.png" alt="" class="vid-img">
+                <img src="Assets/Rectangle 6.png" alt="" id="img-3" class="vid-img">
+                <div class="vid-overlay">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                </div>
                 <p class="vid-text">Breaking game records like OG</p>
             </div>
             <div class="vid-block-info">
                 <img src="Assets/Rectangle 7.png" alt="" class="vid-img">
+                <div class="vid-overlay">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                </div>
                 <p class="vid-text">Busted gaming on school laptop, but you are still lit.</p>
             </div>
         </div>
