fixed some issues

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p class="vid-text">Did you score? #unblockedgames #school</p>
             </div>
             <div class="vid-block-info">
-                <img src="Assets/Rectangle 6.png" alt="" id="img-3" class="vid-img">
+                <img src="Assets/Mini royals.webp" alt="" id="img-3" class="vid-img">
                 <div class="vid-overlay">
                     <i class="fa-regular fa-circle-play"></i>
                     <p>Watch Now</p>
