--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="Assets/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-query.css">
+    <link rel="stylesheet" href="media-query2.css">
     <script src="https://kit.fontawesome.com/04f0a79f59.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -68,36 +69,52 @@
         <p class="vid-text-main">A Collection of Hilarious Videos to Brighten Your Day</p>
         <div class="vid-block">
             <div class="vid-block-info">
-                <img src="Assets/Rectangle 4.png" alt="" class="vid-img">
-                <div class="vid-overlay">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
+                <div class="hover-here">
+                    <img src="Assets/Rectangle 4.png" alt="" class="vid-img">
+                    <div class="vid-overlay">
+                        <i class="fa-regular fa-circle-play"></i>
+                        <p>Watch Now</p>
+                    </div>
                 </div>
-                <p class="vid-text">No Download. No Installs. Play games Instantly on Gamer.</p>
+                <div class="vid-block-text">
+                    <p class="vid-text">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
             </div>
             <div class="vid-block-info">
-                <img src="Assets/Rectangle 5.png" alt="" class="vid-img">
-                <div class="vid-overlay">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
+                <div class="hover-here">
+                    <img src="Assets/Rectangle 5.png" alt="" class="vid-img">
+                    <div class="vid-overlay">
+                        <i class="fa-regular fa-circle-play"></i>
+                        <p>Watch Now</p>
+                    </div>
                 </div>
-                <p class="vid-text">Did you score? #unblockedgames #school</p>
+                <div class="vid-block-text">
+                    <p class="vid-text">Did you score? #unblockedgames #school</p>
+                </div>
             </div>
             <div class="vid-block-info">
-                <img src="Assets/Mini royals.webp" alt="" id="img-3" class="vid-img">
-                <div class="vid-overlay">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
+                <div class="hover-here">
+                    <img src="Assets/Mini royals.webp" alt="" id="img-3" class="vid-img">
+                    <div class="vid-overlay">
+                        <i class="fa-regular fa-circle-play"></i>
+                        <p>Watch Now</p>
+                    </div>
                 </div>
-                <p class="vid-text">Breaking game records like OG</p>
+                <div class="vid-block-text">
+                    <p class="vid-text">Breaking game records like OG</p>
+                </div>
             </div>
             <div class="vid-block-info">
-                <img src="Assets/Rectangle 7.png" alt="" class="vid-img">
-                <div class="vid-overlay">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
+                <div class="hover-here">
+                    <img src="Assets/Rectangle 7.png" alt="" class="vid-img">
+                    <div class="vid-overlay">
+                        <i class="fa-regular fa-circle-play"></i>
+                        <p>Watch Now</p>
+                    </div>
                 </div>
-                <p class="vid-text">Busted gaming on school laptop, but you are still lit.</p>
+                <div class="vid-block-text">
+                    <p class="vid-text">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
             </div>
         </div>
     </section>
